@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import uk.gov.hmcts.darts.authorisation.api.AuthorisationApi;
@@ -56,26 +57,16 @@ public class CloseOldCasesProcessorImpl implements CloseOldCasesProcessor {
 
     @Transactional
     @Override
-    public void closeCases() {
-        log.info("Starting to close old cases...");
-        List<CourtCaseEntity> courtCaseEntityList = caseRepository.findOpenCasesToClose(OffsetDateTime.now().minusYears(years));
-        int totalCasesToClose = courtCaseEntityList.size();
-        log.info("Found {} cases to close.", totalCasesToClose);
+    public void closeCases(int batchSize) {
+        List<CourtCaseEntity> courtCaseEntityList = caseRepository.findOpenCasesToClose(OffsetDateTime.now().minusYears(years),
+                                                                                        Pageable.ofSize(batchSize));
 
         userAccount = authorisationApi.getCurrentUser();
-        int closedCaseCount = 0;
-        for (CourtCaseEntity courtCase : courtCaseEntityList) {
-            closeCase(courtCase);
-            closedCaseCount++;
-            log.info("Closed {} out of {} cases.", closedCaseCount, totalCasesToClose);
-        }
-
-        log.info("Completed closing old cases.");
+        courtCaseEntityList.forEach(this::closeCase);
     }
 
     private void closeCase(CourtCaseEntity courtCase) {
-        log.info("Starting to close case with ID: {}", courtCase.getId());
-
+        log.debug("About to close court case id {}", courtCase.getId());
         List<EventEntity> eventList = new ArrayList<>();
         for (HearingEntity hearingEntity : courtCase.getHearings()) {
             eventList.addAll(hearingEntity.getEventList());
@@ -90,7 +81,7 @@ public class CloseOldCasesProcessorImpl implements CloseOldCasesProcessor {
                 closeCaseInDbAndAddRetention(courtCase, closedEvent.get().getCreatedDateTime());
             } else {
                 //look for the last event and use that date
-                closeCaseInDbAndAddRetention(courtCase, eventList.getFirst().getCreatedDateTime());
+                closeCaseInDbAndAddRetention(courtCase, eventList.get(0).getCreatedDateTime());
             }
         } else if (courtCase.getHearings().isEmpty()) {
             //set to created date
@@ -104,15 +95,14 @@ public class CloseOldCasesProcessorImpl implements CloseOldCasesProcessor {
             if (mediaList.isEmpty()) {
                 //look for the last hearing date and use that
                 courtCase.getHearings().sort(Comparator.comparing(HearingEntity::getHearingDate).reversed());
-                HearingEntity lastHearingEntity = courtCase.getHearings().getFirst();
+                HearingEntity lastHearingEntity = courtCase.getHearings().get(0);
                 closeCaseInDbAndAddRetention(courtCase, OffsetDateTime.of(lastHearingEntity.getHearingDate().atStartOfDay(), ZoneOffset.UTC));
             } else {
                 mediaList.sort(Comparator.comparing(MediaEntity::getCreatedDateTime).reversed());
-                closeCaseInDbAndAddRetention(courtCase, mediaList.getFirst().getCreatedDateTime());
+                closeCaseInDbAndAddRetention(courtCase, mediaList.get(0).getCreatedDateTime());
             }
         }
 
-        log.info("Successfully closed case with ID: {}", courtCase.getId());
     }
 
     private void closeCaseInDbAndAddRetention(CourtCaseEntity courtCase, OffsetDateTime caseClosedDate) {
@@ -121,6 +111,7 @@ public class CloseOldCasesProcessorImpl implements CloseOldCasesProcessor {
         courtCase.setRetConfReason(AGED_CASE);
         courtCase.setRetConfScore(CASE_NOT_PERFECTLY_CLOSED);
         caseRepository.save(courtCase);
+        log.info("Closed court case id {}", courtCase.getId());
 
         LocalDate retentionDate = retentionDateHelper.getRetentionDateForPolicy(courtCase, RetentionPolicyEnum.DEFAULT);
 
@@ -132,5 +123,7 @@ public class CloseOldCasesProcessorImpl implements CloseOldCasesProcessor {
                                                                            CaseRetentionStatus.PENDING);
         retentionEntity.setConfidenceCategory(RetentionConfidenceCategoryEnum.AGED_CASE);
         caseRetentionRepository.save(retentionEntity);
+        log.info("Set retention date {} and confidence category {} for case id {}", retentionDate, RetentionConfidenceCategoryEnum.AGED_CASE,
+                 courtCase.getId());
     }
 }
